# obsidian-rechner

./: .eslintignore  .eslintrc.cjs  .gitignore  LICENSE  README.md  esbuild.config.mjs  main.ts  manifest.json  nbcodeblock.module.css  numbat.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  versions.json  vite.config.ts
.github/workflows/: release.yml
kernels/: README.md
kernels/numbat-kernel/: Cargo.toml  build.sh
kernels/numbat-kernel/src/: lib.rs  node_formatter.rs
kernels/numbat-kernel/tests/: repl.rs
src/: EditorPlugin.ts  NumbatSuggester.ts  exchange-rates.ts  index.css  kernel.ts  main.ts  nbcodeblock.module.css  numbat.css  numbat.ts  numbatviewer.ts  rechner.css  settings.ts
src/numbat-lang/: NumbatParser.js  NumbatParser.terms.js  numbat.grammar
types/: .gitignore
