[package]
name = "numbat-kernel"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
[dependencies]
codespan-reporting = "0.11.1"
numbat = { version = "1.16.0", features = [
	"html-formatter",
], default-features = false }
wasm-bindgen = "0.2.90"
getrandom = { version = "0.2.12", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.77", features = [
	"Document",
	"Element",
	"Node",
	"Window",
	"DocumentFragment",
	"console",
] }
thiserror = "2.0.12"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-nontrapping-float-to-int", "--enable-bulk-memory"]
