[package]
name = "numbat-kernel"
version = "0.2.0"
edition = "2021"
[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.80", features = [
    "Document",
    "Element",
    "Node",
    "Window",
    "DocumentFragment",
    "console",
] }

numbat = { version = "1.16.0", features = [
    "html-formatter",
], default-features = false }
getrandom = { version = "0.3.3", features = ["wasm_js"] }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
codespan-reporting = "0.12.0"
thiserror = "2.0.12"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
# strip = "debuginfo"
codegen-units = 1
# panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-nontrapping-float-to-int", "--enable-bulk-memory"]

[patch.crates-io]
numbat = { git = "https://github.com/sharkdp/numbat.git", branch = "master" }
